--- a/netlify.toml
+++ b/netlify.toml
@@ -2,3 +2,9 @@
   base = ""
   publish = "site"
   command = ""
+
+[[redirects]]
+  from = "/*/index.html"
+  to = "/:splat/"
+  status = 301
+  force = true
