build: fix root index.html and add 404 page

--- a/netlify.toml
+++ b/netlify.toml
@@ -8,3 +8,14 @@
   to = "/:splat/"
   status = 301
   force = true
+
+[[redirects]]
+  from = "/index.html"
+  to = "/"
+  status = 301
+  force = true
+
+[[redirects]]
+  from = "/*"
+  to = "/404/"
+  status = 404
